[gd_scene load_steps=3 format=3 uid="uid://cqup31alfnid"]

[ext_resource type="Script" path="res://Assets/Scene/GUI/TerrainSelectionMenu/TerrainSelectionMenu.gd" id="1_c7ia7"]
[ext_resource type="PackedScene" uid="uid://cnifmcvec3nlf" path="res://Assets/Scene/GUI/TerrainSelectionMenu/AbilityListUI/AbilityListUI.tscn" id="2_774k5"]

[node name="TerrainSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_c7ia7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -27.5
offset_right = 58.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2

[node name="OptionButtonElements" type="OptionButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 1
text_overrun_behavior = 2
allow_reselect = true

[node name="CheckBoxDetail" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
text = "@str::detail"
clip_text = true

[node name="AbilityListUI" parent="." instance=ExtResource("2_774k5")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_v_box_container_mouse_exited"]
[connection signal="item_selected" from="VBoxContainer/OptionButtonElements" to="." method="_on_option_button_elements_item_selected"]
[connection signal="toggled" from="VBoxContainer/CheckBoxDetail" to="." method="_on_check_box_detail_toggled"]
